apps/pipelines/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipelines-user-code
spec:
  selector:
    app: pipelines-user-code
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: pipelines-webserver
spec:
  selector:
    app: pipelines-webserver
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP

---
# Caddy basic-auth gateway in front of pipelines-webserver.
apiVersion: v1
kind: Service
metadata:
  name: pipelines-webserver-proxy
spec:
  selector:
    app: pipelines-webserver-proxy
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: pipelines-filebrowser
spec:
  selector:
    app: pipelines-filebrowser
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
